@startuml controller

interface Action{
    +execute(utente: Utente): Utente
}

note left of Action
    Per questioni di spazio le classi dei casi d'uso delle versioni
    precedenti non vengono rappresentate.
endnote

class AccettaBaratto implements Action{
    +execute(utente: Utente): Utente
    -accettaBaratto(utente: Utente): void
    -selezionaBaratto(u: Utente, sc: Scambio): Baratto
    -inserisciAppuntamento(sc: Scambio): Appuntamento
    -calcolaScadenze(brt: Baratto, scmb: Scambio): String
}


class BarattaOfferta implements Action{
    +execute(utente: Utente): Utente
    -barattaOfferta(utente: Utente): void
    -scegliOffertaAltroAutore(u: Utente, cat: Categoria): Offerta
    -inserisciBaratto(daBarattare: Offerta, scelta: Offerta): Baratto
}


class ModificaAppuntamento implements Action{
    +execute(utente: Utente): Utente
    -visualizzaAppuntamento(utente: Utente): void
    -accettaORispondi(baratto: Baratto, utente: Utente): void
    -nuovoAppuntamento(baratto: Baratto, utente: Utente): void
    -accettaBaratto(baratto: Baratto, utente: Utente): void
    -cambiaAppuntamento(scmb: Scambio, brt: Baratto): Appuntamento
}

class VisualizzaOfferteConf implements Action{
    +execute(utente: Utente): Utente
    -sceltaGerarchia(): void
    -scegliCategoriaFoglia(gerarchiaScelta: Gerarchia): Categoria
    -visualizzaOfferteChSc(categoria: Categoria): void
}


AccettaBaratto --> model.user.Utente
AccettaBaratto --> model.scambio.Scambio
AccettaBaratto --> model.baratto.Baratto
AccettaBaratto --> model.baratto.Appuntamento
BarattaOfferta --> model.user.Utente
BarattaOfferta --> model.offerta.Offerta
BarattaOfferta --> model.baratto.Baratto
ModificaAppuntamento --> model.user.Utente
ModificaAppuntamento --> model.baratto.Baratto
ModificaAppuntamento --> model.scambio.Scambio
VisualizzaOfferteConf --> model.offerta.Offerta




@enduml
